infra/k8s/auth-mongo-depl.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: auth-mongo-depl
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: auth-mongo
#     template:
#       metadata:
#         labels:
#           app: auth-mongo
#       spec:
#         containers:
#           - name: auth-mongo
#             image: mongo
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-mongo-srv
# spec:
#   selector:
#     app: auth-mongo
#   ports:
#     - name: db
#       protocol: TCP
#       port: 27017
#       targetPort: 27017

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec: #how this service is going to behave
  replicas: 1 #one single pod
  selector:
    matchLabels:
      app: auth-mongo
  template: #with the help of template and spec, our services will be selected
    metadata:
      labels: #help in selector(Service)
        app: auth-mongo
    spec:
      containers: #describe the array of containers
        - name: auth-mongo
          image: mongo #image name of the containers
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
